fix 采购订单修改, merge修改,舍弃缓存,入库单字段核对通过